<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_armies">

    <fragment
        android:id="@+id/navigation_all_armies"
        android:name="com.arasvitkus.mesbglister.view.fragments.AllArmiesFragment"
        android:label="@string/title_all_armies"
        tools:layout="@layout/fragment_all_armies" />

    <fragment
        android:id="@+id/navigation_favorite_armies"
        android:name="com.arasvitkus.mesbglister.view.fragments.FavoriteArmiesFragment"
        android:label="@string/title_favorite_armies"
        tools:layout="@layout/fragment_favorite_armies" />

    <fragment
        android:id="@+id/navigation_random_army"
        android:name="com.arasvitkus.mesbglister.view.fragments.RandomArmyFragment"
        android:label="@string/title_random_army"
        tools:layout="@layout/fragment_random_army" />
</navigation>