<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_army_detail_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".view.fragments.ArmyDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_army_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_army_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@color/army_image_background"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/favorite_button_background"
                android:elevation="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/iv_favorite_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_favorite_unselected" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_army_image"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            tools:text="Army Title" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/grey"
            android:textSize="@dimen/_16sdp"
            tools:text="Type" />

        <TextView
            android:id="@+id/tv_faction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            tools:text="Faction" />

        <TextView
            android:id="@+id/tv_list_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_faction"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/lbl_list"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_below="@id/tv_list_label"
            android:textSize="@dimen/_14sdp"
            tools:text="List Value" />

        <TextView
            android:id="@+id/tv_points_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_list"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_points"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_points_label"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp"
            tools:text="Points Value" />

        <TextView
            android:id="@+id/tv_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_points"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/grey"
            tools:text="Notes Value" />
    </RelativeLayout>

</ScrollView>